--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.0"
+    "express-xml-bodyparser": "^0.3.0",
+    "mongoose": "^7.0.0",
+    "xml": "^1.0.1"
   }
 }
